(cse422, lab2)/y.output
Terminals unused in grammar

   DO
   BREAK
   CONTINUE
   CHAR
   DOUBLE
   SWITCH
   CASE
   DEFAULT
   DIVOP
   MODOP
   SUBOP


State 106 conflicts: 1 shift/reduce


Grammar

    0 $accept: start $end

    1 start: program

    2 program: program unit
    3        | unit

    4 unit: var_declaration
    5     | func_definition

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN RPAREN compound_statement

    8 parameter_list: parameter_list COMMA type_specifier ID
    9               | parameter_list COMMA type_specifier
   10               | type_specifier ID
   11               | type_specifier

   12 compound_statement: LCURL statements RCURL
   13                   | LCURL RCURL

   14 var_declaration: type_specifier declaration_list SEMICOLON

   15 type_specifier: INT
   16               | FLOAT
   17               | VOID

   18 declaration_list: declaration_list COMMA ID
   19                 | declaration_list COMMA ID LTHIRD CONST_INT RTHIRD
   20                 | ID
   21                 | ID LTHIRD CONST_INT RTHIRD

   22 statements: statement
   23           | statements statement

   24 statement: var_declaration
   25          | expression_statement
   26          | compound_statement
   27          | FOR LPAREN expression_statement expression_statement expression RPAREN statement
   28          | IF LPAREN expression RPAREN statement
   29          | IF LPAREN expression RPAREN statement ELSE statement
   30          | WHILE LPAREN expression RPAREN statement
   31          | PRINTLN LPAREN ID RPAREN SEMICOLON
   32          | RETURN expression SEMICOLON

   33 expression_statement: SEMICOLON
   34                     | expression SEMICOLON

   35 expression: logic_expression
   36           | variable ASSIGNOP logic_expression

   37 logic_expression: rel_expression
   38                 | rel_expression LOGICOP rel_expression

   39 rel_expression: simple_expression
   40               | simple_expression RELOP simple_expression

   41 simple_expression: term
   42                  | simple_expression ADDOP term

   43 term: unary_expression
   44     | term MULOP unary_expression

   45 unary_expression: ADDOP unary_expression
   46                 | NOT unary_expression
   47                 | factor

   48 factor: variable
   49       | ID LPAREN argument_list RPAREN
   50       | LPAREN expression RPAREN
   51       | CONST_INT
   52       | CONST_FLOAT
   53       | variable INCOP
   54       | variable DECOP

   55 argument_list: arguments
   56              | /* empty */

   57 arguments: arguments COMMA logic_expression
   58          | logic_expression

   59 variable: ID
   60         | ID LTHIRD expression RTHIRD


Terminals, with rules where they appear

$end (0) 0
error (256)
IF (258) 28 29
ELSE (259) 29
FOR (260) 27
WHILE (261) 30
PRINTLN (262) 31
RETURN (263) 32
INT (264) 15
FLOAT (265) 16
VOID (266) 17
ID (267) 6 7 8 10 18 19 20 21 31 49 59 60
CONST_INT (268) 19 21 51
CONST_FLOAT (269) 52
ADDOP (270) 42 45
MULOP (271) 44
RELOP (272) 40
LOGICOP (273) 38
ASSIGNOP (274) 36
NOT (275) 46
LPAREN (276) 6 7 27 28 29 30 31 49 50
RPAREN (277) 6 7 27 28 29 30 31 49 50
LCURL (278) 12 13
RCURL (279) 12 13
LTHIRD (280) 19 21 60
RTHIRD (281) 19 21 60
SEMICOLON (282) 14 31 32 33 34
COMMA (283) 8 9 18 19 57
INCOP (284) 53
DECOP (285) 54
DO (286)
BREAK (287)
CONTINUE (288)
CHAR (289)
DOUBLE (290)
SWITCH (291)
CASE (292)
DEFAULT (293)
DIVOP (294)
MODOP (295)
SUBOP (296)


Nonterminals, with rules where they appear

$accept (42)
    on left: 0
start (43)
    on left: 1, on right: 0
program (44)
    on left: 2 3, on right: 1 2
unit (45)
    on left: 4 5, on right: 2 3
func_definition (46)
    on left: 6 7, on right: 5
parameter_list (47)
    on left: 8 9 10 11, on right: 6 8 9
compound_statement (48)
    on left: 12 13, on right: 6 7 26
var_declaration (49)
    on left: 14, on right: 4 24
type_specifier (50)
    on left: 15 16 17, on right: 6 7 8 9 10 11 14
declaration_list (51)
    on left: 18 19 20 21, on right: 14 18 19
statements (52)
    on left: 22 23, on right: 12 23
statement (53)
    on left: 24 25 26 27 28 29 30 31 32, on right: 22 23 27 28 29 30
expression_statement (54)
    on left: 33 34, on right: 25 27
expression (55)
    on left: 35 36, on right: 27 28 29 30 32 34 50 60
logic_expression (56)
    on left: 37 38, on right: 35 36 57 58
rel_expression (57)
    on left: 39 40, on right: 37 38
simple_expression (58)
    on left: 41 42, on right: 39 40 42
term (59)
    on left: 43 44, on right: 41 42 44
unary_expression (60)
    on left: 45 46 47, on right: 43 44 45 46
factor (61)
    on left: 48 49 50 51 52 53 54, on right: 47
argument_list (62)
    on left: 55 56, on right: 49
arguments (63)
    on left: 57 58, on right: 55 57
variable (64)
    on left: 59 60, on right: 36 48 53 54


State 0

    0 $accept: . start $end

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    start            go to state 4
    program          go to state 5
    unit             go to state 6
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 1

   15 type_specifier: INT .

    $default  reduce using rule 15 (type_specifier)


State 2

   16 type_specifier: FLOAT .

    $default  reduce using rule 16 (type_specifier)


State 3

   17 type_specifier: VOID .

    $default  reduce using rule 17 (type_specifier)


State 4

    0 $accept: start . $end

    $end  shift, and go to state 10


State 5

    1 start: program .
    2 program: program . unit

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    $default  reduce using rule 1 (start)

    unit             go to state 11
    func_definition  go to state 7
    var_declaration  go to state 8
    type_specifier   go to state 9


State 6

    3 program: unit .

    $default  reduce using rule 3 (program)


State 7

    5 unit: func_definition .

    $default  reduce using rule 5 (unit)


State 8

    4 unit: var_declaration .

    $default  reduce using rule 4 (unit)


State 9

    6 func_definition: type_specifier . ID LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier . ID LPAREN RPAREN compound_statement
   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 12

    declaration_list  go to state 13


State 10

    0 $accept: start $end .

    $default  accept


State 11

    2 program: program unit .

    $default  reduce using rule 2 (program)


State 12

    6 func_definition: type_specifier ID . LPAREN parameter_list RPAREN compound_statement
    7                | type_specifier ID . LPAREN RPAREN compound_statement
   20 declaration_list: ID .
   21                 | ID . LTHIRD CONST_INT RTHIRD

    LPAREN  shift, and go to state 14
    LTHIRD  shift, and go to state 15

    $default  reduce using rule 20 (declaration_list)


State 13

   14 var_declaration: type_specifier declaration_list . SEMICOLON
   18 declaration_list: declaration_list . COMMA ID
   19                 | declaration_list . COMMA ID LTHIRD CONST_INT RTHIRD

    SEMICOLON  shift, and go to state 16
    COMMA      shift, and go to state 17


State 14

    6 func_definition: type_specifier ID LPAREN . parameter_list RPAREN compound_statement
    7                | type_specifier ID LPAREN . RPAREN compound_statement

    INT     shift, and go to state 1
    FLOAT   shift, and go to state 2
    VOID    shift, and go to state 3
    RPAREN  shift, and go to state 18

    parameter_list  go to state 19
    type_specifier  go to state 20


State 15

   21 declaration_list: ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 21


State 16

   14 var_declaration: type_specifier declaration_list SEMICOLON .

    $default  reduce using rule 14 (var_declaration)


State 17

   18 declaration_list: declaration_list COMMA . ID
   19                 | declaration_list COMMA . ID LTHIRD CONST_INT RTHIRD

    ID  shift, and go to state 22


State 18

    7 func_definition: type_specifier ID LPAREN RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 24


State 19

    6 func_definition: type_specifier ID LPAREN parameter_list . RPAREN compound_statement
    8 parameter_list: parameter_list . COMMA type_specifier ID
    9               | parameter_list . COMMA type_specifier

    RPAREN  shift, and go to state 25
    COMMA   shift, and go to state 26


State 20

   10 parameter_list: type_specifier . ID
   11               | type_specifier .

    ID  shift, and go to state 27

    $default  reduce using rule 11 (parameter_list)


State 21

   21 declaration_list: ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 28


State 22

   18 declaration_list: declaration_list COMMA ID .
   19                 | declaration_list COMMA ID . LTHIRD CONST_INT RTHIRD

    LTHIRD  shift, and go to state 29

    $default  reduce using rule 18 (declaration_list)


State 23

   12 compound_statement: LCURL . statements RCURL
   13                   | LCURL . RCURL

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    PRINTLN      shift, and go to state 33
    RETURN       shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 41
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statements            go to state 46
    statement             go to state 47
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 24

    7 func_definition: type_specifier ID LPAREN RPAREN compound_statement .

    $default  reduce using rule 7 (func_definition)


State 25

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN . compound_statement

    LCURL  shift, and go to state 23

    compound_statement  go to state 57


State 26

    8 parameter_list: parameter_list COMMA . type_specifier ID
    9               | parameter_list COMMA . type_specifier

    INT    shift, and go to state 1
    FLOAT  shift, and go to state 2
    VOID   shift, and go to state 3

    type_specifier  go to state 58


State 27

   10 parameter_list: type_specifier ID .

    $default  reduce using rule 10 (parameter_list)


State 28

   21 declaration_list: ID LTHIRD CONST_INT RTHIRD .

    $default  reduce using rule 21 (declaration_list)


State 29

   19 declaration_list: declaration_list COMMA ID LTHIRD . CONST_INT RTHIRD

    CONST_INT  shift, and go to state 59


State 30

   28 statement: IF . LPAREN expression RPAREN statement
   29          | IF . LPAREN expression RPAREN statement ELSE statement

    LPAREN  shift, and go to state 60


State 31

   27 statement: FOR . LPAREN expression_statement expression_statement expression RPAREN statement

    LPAREN  shift, and go to state 61


State 32

   30 statement: WHILE . LPAREN expression RPAREN statement

    LPAREN  shift, and go to state 62


State 33

   31 statement: PRINTLN . LPAREN ID RPAREN SEMICOLON

    LPAREN  shift, and go to state 63


State 34

   32 statement: RETURN . expression SEMICOLON

    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    expression         go to state 64
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 35

   49 factor: ID . LPAREN argument_list RPAREN
   59 variable: ID .
   60         | ID . LTHIRD expression RTHIRD

    LPAREN  shift, and go to state 65
    LTHIRD  shift, and go to state 66

    $default  reduce using rule 59 (variable)


State 36

   51 factor: CONST_INT .

    $default  reduce using rule 51 (factor)


State 37

   52 factor: CONST_FLOAT .

    $default  reduce using rule 52 (factor)


State 38

   45 unary_expression: ADDOP . unary_expression

    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    unary_expression  go to state 67
    factor            go to state 55
    variable          go to state 68


State 39

   46 unary_expression: NOT . unary_expression

    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    unary_expression  go to state 69
    factor            go to state 55
    variable          go to state 68


State 40

   50 factor: LPAREN . expression RPAREN

    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    expression         go to state 70
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 41

   13 compound_statement: LCURL RCURL .

    $default  reduce using rule 13 (compound_statement)


State 42

   33 expression_statement: SEMICOLON .

    $default  reduce using rule 33 (expression_statement)


State 43

   26 statement: compound_statement .

    $default  reduce using rule 26 (statement)


State 44

   24 statement: var_declaration .

    $default  reduce using rule 24 (statement)


State 45

   14 var_declaration: type_specifier . declaration_list SEMICOLON

    ID  shift, and go to state 71

    declaration_list  go to state 13


State 46

   12 compound_statement: LCURL statements . RCURL
   23 statements: statements . statement

    IF           shift, and go to state 30
    FOR          shift, and go to state 31
    WHILE        shift, and go to state 32
    PRINTLN      shift, and go to state 33
    RETURN       shift, and go to state 34
    INT          shift, and go to state 1
    FLOAT        shift, and go to state 2
    VOID         shift, and go to state 3
    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    LCURL        shift, and go to state 23
    RCURL        shift, and go to state 72
    SEMICOLON    shift, and go to state 42

    compound_statement    go to state 43
    var_declaration       go to state 44
    type_specifier        go to state 45
    statement             go to state 73
    expression_statement  go to state 48
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 47

   22 statements: statement .

    $default  reduce using rule 22 (statements)


State 48

   25 statement: expression_statement .

    $default  reduce using rule 25 (statement)


State 49

   34 expression_statement: expression . SEMICOLON

    SEMICOLON  shift, and go to state 74


State 50

   35 expression: logic_expression .

    $default  reduce using rule 35 (expression)


State 51

   37 logic_expression: rel_expression .
   38                 | rel_expression . LOGICOP rel_expression

    LOGICOP  shift, and go to state 75

    $default  reduce using rule 37 (logic_expression)


State 52

   39 rel_expression: simple_expression .
   40               | simple_expression . RELOP simple_expression
   42 simple_expression: simple_expression . ADDOP term

    ADDOP  shift, and go to state 76
    RELOP  shift, and go to state 77

    $default  reduce using rule 39 (rel_expression)


State 53

   41 simple_expression: term .
   44 term: term . MULOP unary_expression

    MULOP  shift, and go to state 78

    $default  reduce using rule 41 (simple_expression)


State 54

   43 term: unary_expression .

    $default  reduce using rule 43 (term)


State 55

   47 unary_expression: factor .

    $default  reduce using rule 47 (unary_expression)


State 56

   36 expression: variable . ASSIGNOP logic_expression
   48 factor: variable .
   53       | variable . INCOP
   54       | variable . DECOP

    ASSIGNOP  shift, and go to state 79
    INCOP     shift, and go to state 80
    DECOP     shift, and go to state 81

    $default  reduce using rule 48 (factor)


State 57

    6 func_definition: type_specifier ID LPAREN parameter_list RPAREN compound_statement .

    $default  reduce using rule 6 (func_definition)


State 58

    8 parameter_list: parameter_list COMMA type_specifier . ID
    9               | parameter_list COMMA type_specifier .

    ID  shift, and go to state 82

    $default  reduce using rule 9 (parameter_list)


State 59

   19 declaration_list: declaration_list COMMA ID LTHIRD CONST_INT . RTHIRD

    RTHIRD  shift, and go to state 83


State 60

   28 statement: IF LPAREN . expression RPAREN statement
   29          | IF LPAREN . expression RPAREN statement ELSE statement

    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40

    expression         go to state 84
    logic_expression   go to state 50
    rel_expression     go to state 51
    simple_expression  go to state 52
    term               go to state 53
    unary_expression   go to state 54
    factor             go to state 55
    variable           go to state 56


State 61

   27 statement: FOR LPAREN . expression_statement expression_statement expression RPAREN statement

    ID           shift, and go to state 35
    CONST_INT    shift, and go to state 36
    CONST_FLOAT  shift, and go to state 37
    ADDOP        shift, and go to state 38
    NOT          shift, and go to state 39
    LPAREN       shift, and go to state 40
    SEMICOLON    shift, and go to state 42

    expression_statement  go to state 85
    expression            go to state 49
    logic_expression      go to state 50
    rel_expression        go to state 51
    simple_expression     go to state 52
    term                  go to state 53
    unary_expression      go to state 54
    factor                go to state 55
    variable              go to state 56


State 62

   30 statement: WHILE LPAREN . expression RPAREN statement
